updated some exxperiences and hobbies

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </ul>
     <hr>
     <h3>Hobbies</h3>
-    <ol start="9">
+    <ol start="1">
         <li>Music</li>
-        <li>Speed Biking</li>
-        <li>Reading <em>News Updates</em></li>
+        <li>Brisk Walking</li>
+        <li>Reading <em>News</em></li>
     </ol>
     <hr>
     <h3>Experiences</h3>
