--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Atharva Kumar</title>
+    <style>
+        body {
+            background-color: #EAF6FF;
+        }
+        hr{
+        
+            border-style: dotted none none ;
+            border-width: 5px;
+            border-color: grey;
+            width : 8%;
+        }
+        img{
+            height: 200px;
+        }
+    </style>
 </head>
-<body style="background-color:burlywood">
+<body style="background-color:#EAF6FF">
     <table cellspacing="20">
         <tr>
             <td><img src="1672081676878-modified.png" alt="Smart Bois">
