--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
+<!-- Photobucket for Uploading Photos and Generating Links-->
+<!--dnefn-->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Atharva Kumar</title>
-    <style>
-        body {
-            background-color: #EAF6FF;
-        }
-        hr{
-        
-            border-style: dotted none none ;
-            border-width: 5px;
-            border-color: grey;
-            width : 8%;
-        }
-        img{
-            height: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="CSS/style.css">
+    
 </head>
-<body style="background-color:#EAF6FF">
     <table cellspacing="20">
         <tr>
             <td><img src="1672081676878-modified.png" alt="Smart Bois">
@@ -43,10 +32,10 @@
     </ul>
     <hr>
     <h3>Hobbies</h3>
-    <ol start="1">
+    <ol start="9">
         <li>Music</li>
-        <li>Brisk Walking</li>
-        <li>Reading <em>News</em></li>
+        <li>Speed Biking</li>
+        <li>Reading <em>News Updates</em></li>
     </ol>
     <hr>
     <h3>Experiences</h3>
