--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Details</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     <h3>Contact Information</h3>
@@ -12,7 +13,7 @@
         <li><a href="https://www.linkedin.com/in/atharvakj/">Linkedin</a></li>
         <li><a href="https://twitter.com/atharva_kj">Twitter</a></li>
     </ul>
-
+<!-- 
     <form class="" action="personal_site.html" method="">
         <label>Your Name:</label>
         <input type="text" name="" value="">
@@ -22,6 +23,6 @@
         <input type="submit" name="">
 
 
-    </form>
+    </form> -->
 </body>
 </html>
