--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Atharva Kumar</title>
-    <link rel="stylesheet" href="CSS/style.css">
+<!--     <link rel="stylesheet" href="CSS/style.css"> -->
+    body {
+            background-color: #EAF6FF;
+        }
+        hr{
+        
+            border-style: dotted none none ;
+            border-width: 5px;
+            border-color: grey;
+            width : 8%;
+        }
+        img{
+            height: 200px;
+        }
+        h1{
+            color: #66BFBF;
+        }
+        h3{
+            color: #66BFBF;
+        }
     
 </head>
     <table cellspacing="20">
