Updated Whole Code

--- a/index.html
+++ b/index.html
@@ -1,28 +1,11 @@
-
+<!-- Photobucket for Uploading Photos and Generating Links-->
+<!--dnefn-->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Atharva Kumar</title>
-<!--     <link rel="stylesheet" href="CSS/style.css"> -->
-    body {
-            background-color: #EAF6FF;
-        }
-        hr{
-        
-            border-style: dotted none none ;
-            border-width: 5px;
-            border-color: grey;
-            width : 8%;
-        }
-        img{
-            height: 200px;
-        }
-        h1{
-            color: #66BFBF;
-        }
-        h3{
-            color: #66BFBF;
-        }
+    <link rel="stylesheet" href="CSS/style.css">
     
 </head>
     <table cellspacing="20">
