--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </td>
             <td>
                 <h1>Atharva Kumar Jaiswal</h1>
-        <p><em>I'm Currently a student at</em> <strong><a href="http://www.manit.ac.in/">MANIT Bhopal</a></strong></p>
+        <p><em>I'm Currently pursuing BTech in Electronics and Communication Engineering at</em> <strong><a href="http://www.manit.ac.in/">MANIT Bhopal</a></strong></p>
             </td>
             </tr>
         
@@ -25,20 +25,21 @@
     <hr>
     <h3>Education</h3>
     <ul>
-        <li>MANIT Bhopal</li>
-        <li>Banaras Hindu University</li>
+        <li>MANIT,Bhopal - Present </li>
+        <li>Banaras Hindu University- Dropped</li>
         <li>Lord Buddha Public School</li>
         <li>Sun Beam Public School</li>
     </ul>
     <hr>
     <h3>Hobbies</h3>
-    <ol start="9">
-        <li>Music</li>
+    <ul>
+        <li>Travelling</li>
+        <li>Singing</li>
         <li>Speed Biking</li>
-        <li>Reading <em>News Updates</em></li>
-    </ol>
+        <li>Reading <em> Stories</em></li>
+    </ul>
     <hr>
-    <h3>Experiences</h3>
+<!--     <h3>Experiences</h3>
     <table>
         <thead>
             <tr>
@@ -64,14 +65,14 @@
         
     </tfoot>
     </table>
-    <hr>
+    <hr> -->
     <h3>Skills</h3>
     <table cellspacing="5">
         <tr>
             <td>C++</td>
             <td>⭐⭐⭐⭐⭐</td>
-            <td>C</td>
-            <td>⭐⭐⭐⭐</td>
+            <td>Development </td>
+            <td>⭐⭐</td>
         </tr>
         <tr>
             <td>MS-Office</td>
